Small fixes for CTA banner spacing

--- a/src/components/cta_banner/_cta_banner.scss
+++ b/src/components/cta_banner/_cta_banner.scss
@@ -14,7 +14,7 @@
   font-weight: 600;
   line-height: $great-ds-type-line-height-heading-l-large;
   font-size: $great-ds-type-size-heading-l-large;
-  margin-bottom: 25px;
+  margin: 0 0 25px;
 
   .great-ds-cta-banner--bg-dark-blue & {
     color: $great-ds-semantic-text-default-white-text;
